--- a/styles.css
+++ b/styles.css
@@ -70,4 +70,45 @@ ul li{
     /*top right bottom left*/
     padding: 12px 8px 12px 50px;
     user-select: none;
+    cursor: pointer;
+    position: relative;
+}
+
+ul li::before{
+    content: '';
+    position: absolute;
+    height: 25px;
+    width: 25px;
+    border-radius: 50%;
+    background-image: url(unchecked.png);
+    background-size: cover;
+    background-position: center;
+    bottom: 8px;
+    left: 8px;
+}
+
+ul li span {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    right: 0;
+    top: 4px;
+    font-size: 22px;
+    color: #555;
+    line-height: 40px;
+    text-align: center;
+    border-radius: 50%;
+}
+
+ul li span:hover{
+    background: #edeef0;
+}
+
+.checked{
+    color: #555;
+    text-decoration: line-through;
+}
+
+.checked::before{
+    background-image: url(checked.png);
 }
